k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-service
  labels:
    app: ws-server
spec:
  selector:
    app: ws-server 
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
